Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/Study_Group__c.object-meta.xml
<CustomObject>
    <label>Study Group</label>
    <nameField>
        <label>Study Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>