Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Shared goal for the group, e.g., \&quot;Admin Cert by March\&quot;.</inlineHelpText>
    <label>Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>