Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <inlineHelpText>Name of the study group.</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>