Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Has_Open_Slots__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Slots__c</fullName>
    <description>Indicates whether the study group still has room for more members.</description>
    <formula>Member_Count__c &lt; Max_Members__c</formula>
    <inlineHelpText>Checked when the study group has fewer members than its max capacity.</inlineHelpText>
    <label>Has Open Slots</label>
    <type>Checkbox</type>
</CustomField>