Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Indicates whether the group is currently active based on dates.</description>
    <formula>AND(NOT(ISBLANK(Start_Date__c)), OR(ISBLANK(End_Date__c), End_Date__c &gt;= TODAY()))</formula>
    <inlineHelpText>Checked when the group is active between the start and end dates.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>