Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Max_Members__c.field-meta.xml
<CustomField>
    <fullName>Max_Members__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Maximum number of members allowed in this study group.</inlineHelpText>
    <label>Max Members</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>