Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cached count of active members in this study group.</description>
    <inlineHelpText>Number of members currently in this study group.</inlineHelpText>
    <label>Member Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>