Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/listViews/My_Groups.listView-meta.xml
<ListView>
    <fullName>My_Groups</fullName>
    <columns>Group_Name__c</columns>
    <columns>Goal__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Member_Count__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Groups</label>
</ListView>