Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Study_Group__c/listViews/Open_Groups.listView-meta.xml
<ListView>
    <fullName>Open_Groups</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Group_Name__c</columns>
    <columns>Goal__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Member_Count__c</columns>
    <columns>Max_Members__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Has_Open_Slots__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open Groups</label>
</ListView>